# Bencode_Lib

./: .Jenkinsfile.kate-swp  .gitignore  Bencode_Config.h.in  Bencode_Lib_Compliance_Report.md  Bencode_Size_Performance_Roadmap.md  CMakeLists.txt  DRY_Refactor_Plan.md  DRY_Refactor_Plan_Analysis.md  EMBEDDED_OPTIMIZATION_PLAN.md  Jenkinsfile  OPTIMIZATION_PLAN.md  README.md  SIZE_PERFORMANCE_PLAN.md  notes.txt  stdafx.h
classes/: Bencode.cpp  BencodeImplementation.cpp  Bencode_Impl.cpp
classes/implementation/: Bencode_BNode.cpp  Bencode_Impl.cpp  Bencode_Impl_Decode.cpp  Bencode_Impl_Encode.cpp
classes/implementation/decoder/: Bencode_Decoder.cpp  Decoder_Default.cpp
classes/implementation/encoder/: Bencode_Encoder.cpp  Encoder_Default.cpp
classes/include/: Bencode.hpp  Bencode_Core.hpp  Bencode_Optional_Stringify.hpp
classes/include/implementation/: Bencode_Core.hpp  Bencode_Impl.hpp
classes/source/: Bencode.cpp
docs/: API.md  EMBEDDED.md  Examples.md  Guide.md
examples/: Bencode_Analyze_File.cpp  Bencode_Create_At_Runtime.cpp  Bencode_Fibonacci.cpp  Bencode_Read_Torrent_Files.cpp  Bencode_Torrent_Files_To_JSON.cpp  Bencode_Torrent_Files_To_XML.cpp  CMakeLists.txt  Convert_Torrent_Files_To_JSON.cpp  Read_Torrent_Files.cpp  TorrentInfo.hpp  Torrent_Files_To_JSON.cpp  Torrent_Files_To_XML.cpp  read_torrent_file.cpp  read_torrent_files.cpp
examples/embedded/: CMakeLists.txt
examples/embedded/source/: Embedded_Example.cpp
examples/include/: Bencode_Analyzer.hpp  Bencode_TorrentInfo.hpp  Bencode_Utility.hpp  Encoder_JSON.hpp  Encoder_XML.hpp  JSON_Encoder.hpp  TorrentInfo.hpp  Utility.hpp  XML_Encoder.hpp
examples/source/: Bencode_Advanced_Features_Example.cpp  Bencode_Analyze_File.cpp  Bencode_Build_Settings_File.cpp  Bencode_Create_At_Runtime.cpp  Bencode_Fibonacci.cpp  Bencode_Large_File_Example.cpp  Bencode_Minimal_Encode_Decode.cpp  Bencode_Modify_Torrent.cpp  Bencode_Nested_Structures_Example.cpp  Bencode_Read_Torrent_Files.cpp  Bencode_Torrent_Files_To_JSON.cpp  Bencode_Torrent_Files_To_XML.cpp  Bencode_Torrent_Files_To_YAML.cpp  Bencode_Torrent_Statistics.cpp
include/: BNode.hpp  Bencode.hpp  BencodeDestinations.hpp  BencodeImplementation.hpp  BencodeSources.hpp  Bencode_Destinations.hpp  Bencode_Forward.hpp  Bencode_Impl.hpp  Bencode_Nodes.hpp  Bencode_Sources.hpp  Bencoding.hpp  IDestination.hpp  ISource.hpp
include/implementation/: Bencode_Core.hpp  Bencode_Destinations.hpp  Bencode_Impl.hpp  Bencode_Interfaces.hpp  Bencode_Sources.hpp  Bencode_Types.hpp
include/interface/: Bencode_Interfaces.hpp  IAction.hpp  IDecoder.hpp  IDestination.hpp  IEncoder.hpp  ISource.hpp  ITranslator.hpp
scripts/: Linux-Build.sh  Linux-Run-Tests.sh  Linux-Run.sh
tests/: BencodeLib_Tests.hpp  BencodeLib_Tests_Decode.cpp  BencodeLib_Tests_Encode.cpp  BencodeLib_Tests_Helper.cpp  BencodeLib_Tests_Main.cpp  BencodeLib_tests.hpp  BencodeLib_tests_decode.cpp  BencodeLib_tests_encode.cpp  BencodeLib_tests_helper.cpp  BencodeLib_tests_main.cpp  Bencode_Lib_Tests.hpp  Bencode_Lib_Tests_BNode.cpp  Bencode_Lib_Tests_Bencode.cpp  Bencode_Lib_Tests_Decode.cpp  Bencode_Lib_Tests_Encode.cpp  Bencode_Lib_Tests_Helper.cpp  Bencode_Lib_Tests_IDestination.cpp  Bencode_Lib_Tests_ISource.cpp  Bencode_Lib_Tests_Main.cpp  Bencode_Lib_Tests_Misc.cpp  Bencode_tests.hpp  Bencode_tests_decode.cpp  Bencode_tests_encode.cpp  Bencode_tests_helper.cpp  Bencode_tests_main.cpp  CMakeLists.txt
tests/IO/: Bencode_Lib_Tests_IDestination.cpp
tests/bencode/: Bencode_Lib_Tests_Bencode.cpp
tests/bnode/: Bencode_Lib_Tests_BNode.cpp
tests/decoder/: Bencode_Lib_Tests_Decode.cpp
tests/encoder/: Bencode_Lib_Tests_Encode.cpp  Bencode_Lib_Tests_JSON_Encode.cpp  Bencode_Lib_Tests_XML_Encode.cpp  Bencode_Lib_tests_XML_Encode.cpp
tests/files/: testfile001.ben
tests/include/: Bencode_Lib_Tests.hpp
tests/io/: Bencode_Lib_Tests_IDestination.cpp  Bencode_Lib_Tests_ISource.cpp
tests/misc/: Bencode_Lib_Tests_Helper.cpp  Bencode_Lib_Tests_Misc.cpp
tests/source/benchmark/: Bencode_Lib_Benchmark.cpp
tests/source/bencode/: Bencode_Lib_Tests_Bencode_Complex.cpp  Bencode_Lib_Tests_Bencode_Dictionary.cpp  Bencode_Lib_Tests_Bencode_List.cpp
tests/source/bnode/: Bencode_Lib_Tests_BNode.cpp  Bencode_Lib_Tests_BNode_Assignment.cpp  Bencode_Lib_Tests_BNode_Constructor.cpp  Bencode_Lib_Tests_BNode_Indexing.cpp  Bencode_Lib_Tests_BNode_Reference.cpp
tests/source/decoder/: Bencode_Lib_Tests_Decode.cpp  Bencode_Lib_Tests_Decode_Collection.cpp  Bencode_Lib_Tests_Decode_Exception.cpp  Bencode_Lib_Tests_Decode_Misc.cpp  Bencode_Lib_Tests_Decode_Simple.cpp
tests/source/embedded/: Bencode_Lib_Tests_Embedded.cpp
tests/source/encoder/: Bencode_Lib_Tests_Encode.cpp  Bencode_Lib_Tests_Encode_Collection.cpp  Bencode_Lib_Tests_Encode_Misc.cpp  Bencode_Lib_Tests_Encode_Simple.cpp  Bencode_Lib_Tests_JSON_Encode.cpp  Bencode_Lib_Tests_XML_Encode.cpp  Bencode_Lib_Tests_YAML_Encode.cpp
tests/source/io/: Bencode_Lib_Tests_IDestination.cpp  Bencode_Lib_Tests_IDestination_Buffer.cpp  Bencode_Lib_Tests_IDestination_File.cpp  Bencode_Lib_Tests_ISource.cpp  Bencode_Lib_Tests_ISource_Buffer.cpp  Bencode_Lib_Tests_ISource_File.cpp  Bencode_Lib_Tests_ToFile.cpp  Bencode_Tests_File_FromFile.cpp
tests/source/minimal/: Bencode_Lib_Tests_Minimal.cpp
tests/source/misc/: Bencode_Lib_Tests_Helper.cpp  Bencode_Lib_Tests_Misc.cpp
tests/source/node/: Bencode_Lib_Tests_Node_Assignment.cpp  Bencode_Lib_Tests_Node_Constructor.cpp  Bencode_Lib_Tests_Node_Indexing.cpp  Bencode_Lib_Tests_Node_Reference.cpp
tests/source/parser/: Bencode_Lib_Tests_Parse_Collection.cpp  Bencode_Lib_Tests_Parse_Exception.cpp  Bencode_Lib_Tests_Parse_Misc.cpp  Bencode_Lib_Tests_Parse_Simple.cpp
tests/source/stringify/: Bencode_Lib_Tests_JSON_Stringify.cpp  Bencode_Lib_Tests_Stringify_Collection.cpp  Bencode_Lib_Tests_Stringify_Misc.cpp  Bencode_Lib_Tests_Stringify_Simple.cpp  Bencode_Lib_Tests_XML_Stringify.cpp  Bencode_Lib_Tests_YAML_Stringify.cpp
tests/source/traverse/: Bencode_lib_Tests_Traverse.cpp
tests/traverse/: Bencode_lib_Tests_Traverse.cpp
(+97 files in other folders)
